# gemma-cpp-python

./: CMakeLists.txt  MANIFEST.in  example.py  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/: _pygemma.pyi  gemma_binding.cpp  gemma_binding.h
src/_pygemma/: gemma_binding.cpp  gemma_binding.h
src/pygemma/: __init__.py  gemma.py  gemma_cpp.py
tests/: test_gemma.py
