[metadata]
name = pygemma
version = 0.1.1
author = Nam Tran
author_email = namtran.ase@gmail.com
description = A Python package with a C++ backend using gemma.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    pygemma
python_requires = >=3.8
package_dir = 
    =src
zip_safe = no
